<resources>
    <string name="app_name" translatable="false">Tam Tam</string>
    <string name="login">Login</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="btn_login">Login</string>
    <string name="registration">Registration</string>
    <string name="btn_register">Register</string>
    <string name="login_now">Do you have an account? Login now</string>
    <string name="register_now">Do you have no account? Register now</string>
    <string name="logout">Logout</string>
    <string name="add_some_information">Add some information</string>
    <string name="name">Name*</string>
    <string name="surname">Surname</string>
    <string name="description">Write something about you</string>
    <string name="age">Age*</string>
    <string name="go_next">Go next</string>
    <string name="skip_adding_info">It is very boring! Skip it</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Профиль</string>
    <string name="events">Лента</string>
    <string name="create">Создать</string>
    <string name="mine">Мои</string>
    <string name="mail_example">example@mail.ru</string>
    <string name="create_event">Create event</string>
    <string name="your_events">Your events</string>
    <string name="i_am_a_creator">I am a creator</string>
    <string name="name_surname">Name Surname</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="save">Save</string>
    <string name="name_of_your_event">Name of your event</string>
    <string name="create_event_btn_txt">Create event</string>
    <string name="name_of_event">Name of Event</string>
    <string name="description_of_event">Description of event</string>
    <string name="back">Back</string>
</resources>