<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/darkBackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="32sp"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:gravity="left"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:showDividers="middle"
        android:divider="@drawable/empty_tall_divider"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_surname"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Events creator ♥"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/edit"/>


    </LinearLayout>


</LinearLayout>