<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".activity.AddProfile">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/add_some_information"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/choose_image_button"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/round_profile_picture"
        android:src="@drawable/default_profile_picture"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/default_profile_picture" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopEnd="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopEnd="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopEnd="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopEnd="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:layout_marginStart="60dp"
        android:id="@+id/isCreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:buttonTint="@color/whiteGrey"
        android:text="@string/i_am_a_creator" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/go_next"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</LinearLayout>