<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".fragments.AboutMeFragment">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:showDividers="middle"
        android:divider="@drawable/empty_tall_divider"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="140dp"
            android:layout_height="140dp"

            android:background="@drawable/round_profile_picture"
            android:src="@drawable/default_profile_picture"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_surname"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/event_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="Events creator ♥"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/edit"/>


    </LinearLayout>

</LinearLayout>