<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".fragments.CreateEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/darkBackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_event"
            android:textSize="32sp"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/u_are_not_creator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="Вы не создатель"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/create_event_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_image_event"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:background="@drawable/round_20dp_back"
                android:src="@drawable/default_event_picture"
                android:layout_marginBottom="30dp" />

            <TextView
                android:text="Заполните информацию"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/white"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_of_your_event"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/white"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:maxLength="400"
                    android:hint="Description of your event"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/white"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/seats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Available space (from 1 to 10000)"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="40dp"
                android:paddingVertical="12dp"
                android:layout_marginBottom="20dp"
                android:text="@string/create_event_btn_txt"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>